MetaInfFaceletTaglibraryConfigProvider.getResources lambda expression
Signed-off-by: pizzi80 <paolo@given2.com>